--- a/feature-account-impl/src/main/res/layout/fragment_import_account.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_import_account.xml
@@ -35,13 +35,26 @@
             android:fitsSystemWindows="true"
             android:orientation="vertical">
 
+
+            <jp.co.soramitsu.common.view.LabeledTextView
+                android:id="@+id/importForcedChain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:enabled="false"
+                app:label="@string/common_chain"
+                tools:message="Kusama"
+                tools:textIcon="@drawable/ic_ksm_24" />
+
             <jp.co.soramitsu.common.view.LabeledTextView
                 android:id="@+id/sourceTypeInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/x2"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="@dimen/x2"
-                android:layout_marginEnd="@dimen/x2"
+                android:layout_marginEnd="16dp"
                 app:actionIcon="@drawable/ic_pin_white_24"
                 app:label="@string/recovery_source_type"
                 tools:message="Mnemonic" />
@@ -50,9 +63,9 @@
                 android:id="@+id/sourceTypeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/x2"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="@dimen/x2"
-                android:layout_marginEnd="@dimen/x2"
+                android:layout_marginEnd="16dp"
                 android:animateLayoutChanges="true"
                 tools:background="@drawable/bg_big_input_shape"
                 tools:layout_height="200dp" />
