Working transfers (Moonbase)

--- a/feature-wallet-impl/src/main/res/layout/fragment_balance_detail.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_balance_detail.xml
@@ -48,8 +48,8 @@
 
                 <ImageView
                     android:id="@+id/balanceDetailTokenIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginEnd="16dp"
                     android:src="@drawable/ic_token_ksm"
                     app:layout_constraintBottom_toBottomOf="@+id/balanceDetailBack"
