--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -78,6 +78,10 @@
         <item name="android:background">@drawable/bg_button_outline_selector</item>
     </style>
 
+    <style name="TransparentButton" parent="">
+        <item name="colorAccent">@color/blurColor</item>
+    </style>
+
     <style name="Widget.Fearless.Puller" parent="">
         <item name="android:layout_height">2dp</item>
         <item name="android:layout_width">35dp</item>
