--- a/feature-onboarding-impl/src/main/res/layout/fragment_welcome.xml
+++ b/feature-onboarding-impl/src/main/res/layout/fragment_welcome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_background_image">
+    android:background="@drawable/novabg_welcome_screen">
 
     <ImageView
         android:id="@+id/back"
@@ -23,7 +23,7 @@
         android:id="@+id/logoImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/drawable_fearless_logo"
+        android:src="@drawable/drawable_nova_logo"
         app:layout_constraintBottom_toTopOf="@id/buttonsView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +44,7 @@
             android:id="@+id/createAccountBtn"
             style="@style/Widget.Fearless.Button.Primary"
             android:layout_width="match_parent"
+            android:theme="@style/TransparentButton"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x1"
             android:text="@string/onboarding_create_account" />
@@ -53,6 +54,7 @@
             style="@style/Widget.Fearless.Button.Primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/TransparentButton"
             android:layout_margin="@dimen/x1"
             android:text="@string/onboarding_restore_account" />
 
