--- a/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
@@ -55,6 +55,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:overScrollMode="never"
+            android:paddingBottom="16dp"
+            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
