--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
         <item name="fontRegular">@font/soramitsu_regular</item>
         <!--fonts-->
 
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/accentBlue</item>
     </style>
 
     <style name="PinkOverlay" parent="ThemeOverlay.AppCompat">
