--- a/feature-onboarding-impl/src/main/res/layout/fragment_welcome.xml
+++ b/feature-onboarding-impl/src/main/res/layout/fragment_welcome.xml
@@ -44,7 +44,7 @@
             android:id="@+id/createAccountBtn"
             style="@style/Widget.Fearless.Button.Primary"
             android:layout_width="match_parent"
-            android:theme="@style/TransparentButton"
+            android:theme="@style/AccentBlue"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x1"
             android:text="@string/onboarding_create_account" />
@@ -54,7 +54,7 @@
             style="@style/Widget.Fearless.Button.Primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/TransparentButton"
+            android:theme="@style/AccentBlue"
             android:layout_margin="@dimen/x1"
             android:text="@string/onboarding_restore_account" />
 
