--- a/feature-wallet-impl/src/main/res/layout/item_asset.xml
+++ b/feature-wallet-impl/src/main/res/layout/item_asset.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     tools:background="@color/blurColor"
     android:layout_height="@dimen/asset_height"
-    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:layout_weight="1">
 
     <ImageView
