--- a/feature-account-impl/src/main/res/layout/item_edit_account.xml
+++ b/feature-account-impl/src/main/res/layout/item_edit_account.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_drag"
         android:tint="@color/white"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
