Complete shapes rounding and change some backrogund

--- a/feature-account-impl/src/main/res/layout/fragment_about.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_about.xml
@@ -10,15 +10,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/bgIv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="280dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/about_top_background"
+            android:src="@drawable/novabg_welcome_screen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
