Moonbeam terms screen ui

--- a/common/src/main/res/layout/view_go_next.xml
+++ b/common/src/main/res/layout/view_go_next.xml
@@ -75,7 +75,7 @@
         app:constraint_referenced_ids="goNextProgress,goNextActionImage" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/goNextDivider"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginStart="16dp"
