--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -199,6 +199,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_moonbeamCrowdloanTermsFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            app:destination="@id/moonbeamCrowdloanTermsFragment" />
     </fragment>
 
     <fragment
@@ -838,5 +846,11 @@
         android:name="io.novafoundation.nova.feature_crowdloan_impl.presentation.contribute.custom.CustomContributeFragment"
         android:label="CustomContributeFragment"
         tools:layout="@layout/fragment_custom_contribute" />
+
+    <fragment
+        tools:layout="@layout/fragment_moonbeam_terms"
+        android:id="@+id/moonbeamCrowdloanTermsFragment"
+        android:name="io.novafoundation.nova.feature_crowdloan_impl.presentation.contribute.custom.moonbeam.terms.MoonbeamCrowdloanTermsFragment"
+        android:label="MoonbeamCrowdloanTermsFragment" />
 
 </navigation>
