--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -65,6 +65,7 @@
         <attr name="android:text" />
         <attr name="icon" />
         <attr name="actionIcon" />
+        <attr name="dividerVisible" />
     </declare-styleable>
 
     <declare-styleable name="PrimaryButton">
