--- a/feature-crowdloan-impl/src/main/res/layout/fragment_moonbeam_terms.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_moonbeam_terms.xml
@@ -13,16 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false"
-        app:title="@null" />
-
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Header2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/crowdloan_moonbeam_terms_title" />
+        app:titleText="@string/onboarding_terms_and_conditions_2" />
 
     <TextView
         style="@style/TextAppearance.NovaFoundation.Body1"
@@ -39,22 +30,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:actionIcon="@drawable/ic_arrow_right_24"
+        app:actionIcon="@drawable/ic_arrow_top_right_white_16"
         app:dividerVisible="false"
         tools:text="Moonbeam’s Terms &amp; Conditions" />
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/moonbeamTermsCheckbox"
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:checked="false"
-        android:text="@string/crowdloan_privacy_policy"
-        android:textColor="@color/white_64"
-        app:layout_constraintStart_toStartOf="@+id/referralBonus"
-        app:layout_constraintTop_toBottomOf="@+id/referralBonus" />
+        android:orientation="horizontal">
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/moonbeamTermsCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:checked="false"
+            app:layout_constraintStart_toStartOf="@+id/referralBonus"
+            app:layout_constraintTop_toBottomOf="@+id/referralBonus" />
+
+        <TextView
+            style="@style/TextAppearance.NovaFoundation.Body2"
+            android:textColor="@color/white_64"
+            android:text="@string/crowdloan_privacy_policy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <Space
         android:layout_width="match_parent"
