--- a/common/src/main/res/layout/view_labeled_text.xml
+++ b/common/src/main/res/layout/view_labeled_text.xml
@@ -8,13 +8,22 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
+        android:id="@+id/labeledTextPrimaryIcon"
+        android:layout_height="24dp"
+        android:layout_marginStart="10dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="24dp" />
+
+    <ImageView
         android:id="@+id/labeledTextIcon"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        android:layout_marginStart="16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/labeledTextText"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/labeledTextLabel"
         app:layout_constraintTop_toTopOf="@id/labeledTextText"
         tools:src="@color/colorAccent" />
 
@@ -23,13 +32,14 @@
         style="@style/TextAppearance.NovaFoundation.Body2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="12dp"
+        app:layout_goneMarginStart="16dp"
         android:layout_marginTop="8dp"
         android:includeFontPadding="false"
         android:textColor="@color/colorHint"
         app:layout_constraintEnd_toStartOf="@id/labeledTextAction"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/labeledTextPrimaryIcon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="@string/common_account" />
@@ -54,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/labeledTextLabel"
         app:layout_constraintVertical_bias="0.0"
         app:layout_goneMarginEnd="16dp"
-        app:layout_goneMarginStart="16dp"
+        app:layout_goneMarginStart="0dp"
         tools:text="GybH55zsi5nAGybH55zsi5nAGybH55zsi5nAGybH55zsi5nA" />
 
     <ImageView
