--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -22,6 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/crowdloanContributeScrollableContent"
             android:orientation="vertical">
 
             <TextView
@@ -41,6 +42,7 @@
                 android:layout_marginEnd="16dp" />
 
             <LinearLayout
+                android:id="@+id/crowdloanContributeDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
