--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute_confirm.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute_confirm.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
                 android:enabled="false" />
 
@@ -48,7 +49,6 @@
                 android:id="@+id/confirmContributeReward"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 app:title="@string/staking_validator_estimated_reward" />
