--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -66,6 +66,7 @@
         <attr name="icon" />
         <attr name="actionIcon" />
         <attr name="dividerVisible" />
+        <attr name="android:background" />
     </declare-styleable>
 
     <declare-styleable name="PrimaryButton">
