--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -117,7 +117,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="?attr/colorAccent"
                     style="@style/TextAppearance.NovaFoundation.Body2"
                     android:id="@+id/crowdloanContributeBonusReward"
                     tools:text="@string/crowdloan_bonus_action" />
