inject acala contribution type views into select contribute screen

--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:id="@+id/crowdloanContributeTitle"
                 android:text="@string/crowdloan_contribute_title" />
 
             <io.novafoundation.nova.common.view.AmountView
