--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="blurColorLight">#66000000</color>
 
     <color name="white_10">#1AFFFFFF</color>
+    <color name="white_16">#29FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
     <color name="white_30">#4DFFFFFF</color>
     <color name="white_24">#3DFFFFFF</color>
