--- a/feature-staking-impl/src/main/res/layout/view_reward_destination_chooser.xml
+++ b/feature-staking-impl/src/main/res/layout/view_reward_destination_chooser.xml
@@ -52,7 +52,7 @@
         android:layout_marginEnd="16dp"
         android:paddingBottom="12dp"
         android:text="@string/staking_rewards_learn_more"
-        app:drawableStartCompat="@drawable/ic_fearless"
+        app:drawableStartCompat="@drawable/ic_nova"
         app:drawableEndCompat="@drawable/ic_arrow_top_right_white_16" />
 
     <View
