Remove pink theme from staking screens

--- a/feature-staking-impl/src/main/res/layout/fragment_review_custom_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_review_custom_validators.xml
@@ -64,6 +64,5 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="22dp"
-        tools:text="@string/common_continue"
-        android:theme="@style/PinkOverlay" />
+        tools:text="@string/common_continue" />
 </LinearLayout>
