--- a/feature-staking-impl/src/main/res/layout/fragment_custom_validators_settings.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_custom_validators_settings.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    android:theme="@style/PinkOverlay">
+    android:fitsSystemWindows="true">
 
     <io.novafoundation.nova.common.view.Toolbar
         android:layout_width="match_parent"
