--- a/feature-staking-impl/src/main/res/layout/fragment_story.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_story.xml
@@ -57,8 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="@string/common_learn_more"
-            android:theme="@style/PinkOverlay" />
+            android:text="@string/common_learn_more" />
 
     </LinearLayout>
 
